lab10/zad05/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: backend
spec:
  selector:
    matchLabels:
      tier: backend

  replicas: 1
  template: 
    metadata:
      labels: 
        tier: backend
    spec:
     containers:
     - name: back
       image: back:release0
