lab10/zad05/ingress-service.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: ingress-service
  annotations: 
    kubernetes.io.ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
  
spec:
  rules:
    - http: 
        paths:
          - path: "/api/?(.*)"
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port: 
                  number: 5000
          - path: "/?(.*)"
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port: 
                  number: 80
